--- a/src/main/webapp/partials/movies.html
+++ b/src/main/webapp/partials/movies.html
@@ -1,5 +1,4 @@
 <div class="row-fluid">
-
     <table class="table table-striped table-bordered table-condensed">
         <thead>
         <tr>
@@ -17,15 +16,17 @@
             <td>{{movie.length}}</td>
             <td>{{movie.filmwebGrade}}</td>
             <td>
-                <button ng-click="editMovie(movie)" class="btn btn-warning"><i class="icon-edit icon-white"></i> Edit</button>
-                <button ng-click="deleteMovie(movie)" class="btn btn-danger"><i class="icon-trash icon-white"></i> Delete</button>
+                <button ng-click="editMovie(movie)" class="btn btn-warning"><i class="icon-edit icon-white"></i> Edit
+                </button>
+                <button ng-click="deleteMovie(movie)" class="btn btn-danger"><i class="icon-trash icon-white"></i>
+                    Delete
+                </button>
             </td>
         </tr>
         </tbody>
 
     </table>
     <button ng-click="createMovie()" class="btn btn-default">Create Movie</button>
-
 </div>
 
 <script type="text/ng-template" id="createMovieModal.html">
@@ -33,17 +34,63 @@
         <h3 class="modal-title">Create new movie</h3>
     </div>
     <div class="modal-body">
-        <div class="container">
-            <div class="row">
-                <div class="form-group">
-                    <div class="form-row">
-                        <label class="control-label">Title</label>
-                        <input type="text" ng-model="movie.title" class="form-controll"/>
-                    </div>
+        <!-- ERRORS -->
+        <div ng-show="validationErrors">
+            <div ng-repeat="(field, error) in validationErrors">
+                <div class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span>{{error}}
                 </div>
             </div>
         </div>
+
+        <div class="form-group">
+
+            <div class="form-row">
+                <label for="movieTitle">Title:</label>
+                <input ng-model="movie.title" id="movieTitle" class="form-control" type="text" placeholder="Title"/>
+            </div>
+
+            <div class="form-row">
+                <label for="movieDescription">Description:</label>
+                <textarea ng-model="movie.description" id="movieDescription" class="form-control" rows="3" placeholder="Description" ></textarea>
+            </div>
+
+            <div class="form-row">
+
+
+
+                <div class="form-inline">
+
+                    <div class="form-group" style="width: 49%">
+                        <label for="movieFilmwebGrade">Filmweb Grade:</label>
+                        <input  ng-model="movie.filmwebGrade" id="movieFilmwebGrade" class="form-control" type="number" placeholder="Filmweb grade" style="width: 100%"/>
+                    </div>
+                    <div class="form-group"  style="width: 49%; float: right;">
+                        <label for="movieFilmwebGrade">Viewers Grade:</label>
+                        <input ng-model="movie.viewersGrade" id="movieViewersGrade" class="form-control" type="number" placeholder="Viewers Grade" style="width: 100%"/>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <label for="movieCategory">Category</label>
+                <select ng-model="movie.category" ng-options="category.name for category in categories" id="movieCategory" class="form-control" >
+                </select>
+            </div>
+
+            <div class="form-row">
+                <label for="movieLength">Length in minutes:</label>
+                <input ng-model="movie.length" id="movieLength" class="form-control" type="text" placeholder="Length in minutes"/>
+            </div>
+
+            <div class="form-row">
+                <label for="movieMinimumAge">Minimm Age</label>
+                <input ng-model="movie.minimumAge" id="movieMinimumAge" class="form-control" type="text" placeholder="Minimum age"/>
+            </div>
+        </div>
     </div>
+
     <div class="modal-footer">
         <button class="btn btn-success" ng-click="saveMovie()">Save</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
