--- a/src/main/webapp/partials/category.html
+++ b/src/main/webapp/partials/category.html
@@ -1,8 +1,8 @@
 <table class="table table-striped table-bordered table-condensed">
-    <thead>
+    <thead >
     <tr>
-        <th>Name</th>
-        <th></th>
+        <th >Name</th>
+        <th class="col-sm-1"></th>
     </tr>
     </thead>
     <tbody>
