--- a/src/main/webapp/partials/createShowingModal.html
+++ b/src/main/webapp/partials/createShowingModal.html
@@ -21,7 +21,7 @@
 
         <div class="form-row">
             <label for="movieTitle">Hour:</label>
-            <input ng-model="showing.hour" id="movieTitle" class="form-control" type="text" placeholder="Hour"/>
+            <input ng-model="showing.hour" id="movieTitle" class="form-control" type="text" placeholder="HH:mm:ss"/>
         </div>
 
         <div class="form-row">
