--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -54,7 +54,8 @@
   border-radius: 4px;
   height: 40px;
   width: 40px;
-  margin: 3px; }
+  margin: 3px;
+  padding: 10px; }
 
 .seat-active {
   background-color: #7FFF00 !important; }
